navbar and home

--- a/pages/mathilda.html
+++ b/pages/mathilda.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mathilda</title>
+  <title>BangasDex - Mathilda</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Cabeçalho da página -->
   <header>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../magos.html">Magos</a></li>
@@ -23,85 +24,8 @@
   <!-- Corpo da página -->
   <main>
     <section>
-      <h1>Mathilda</h1>
-      <p>"A brave girl who stands up and doesn't fear power"</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/BV_c3xANk8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <h2>Skins:</h2>
-      <img src="../assets/images/mathilda/Hero1022-portrait.webp" alt="">
-      <img src="../assets/images/mathilda/Hero1023-portrait.webp" alt="">
-      <img src="../assets/images/mathilda/Hero1024-portrait.webp" alt="">
-      
 
-      <table border="1">
-        <thead>
-          <th>Classe</th>
-          <th>Especialidade</th>
-          <th>Tipo de dano</th>
-          <th>Preço</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Suporte/Assassino</td>
-            <td>Proteger/Iniciar</td>
-            <td>Mágico à distância</td>
-            <td>
-              <img width="20" src="../assets/images/Battle_Points.webp"> 32.000 ou
-              <img width="20" src="../assets/images/Diamond.webp"> 599
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <br>
-
-      <table border="0">
-        <caption>Avaliação</caption>
-        <tbody>
-          <tr>
-            <td>Durabilidade</td>
-            <td>4.5/10</td>
-          </tr>
-          <tr>
-            <td>Dano</td>
-            <td>5.5/10</td>
-          </tr>
-          <tr>
-            <td>Controle de grupo</td>
-            <td>8/10</td>
-          </tr>
-          <tr>
-            <td>Dificuldade</td>
-            <td>8/10</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <br>
-
-      <form>
-        <fieldset>
-          <legend>Escrever comentário</legend>
-          
-          <label for="nickname">Nickname</label>
-          <input type="text" name="nickname" id="">
-          <br>
-
-          <label for="email">E-mail</label>
-          <input type="email" name="email" id="">
-          <br>
-
-          <label for="comentario">Comentário</label>
-          <textarea name="comentario" cols="30" rows="10"></textarea>
-          <br>
-
-          <input type="checkbox" name="anonimo" id="">
-          <label for="anonimo">Comentar anonimamente</label>
-
-          <button type="submit">Enviar</button>
-        </fieldset>
-      </form>
     </section>
-
   </main>
   <!-- /Corpo da página -->
 
