--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BangasDex</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="BangasDex.css">
 </head>
 <body>
   <!-- Cabeçalho da página -->
   <header>
     <nav>
+      <div class="logo">BangasDex</div>
+      <input type="checkbox" id="checkbox">
+      <label for="checkbox" id="icon">
+        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+      </label>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../magos.html">Magos</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Heroes</a></li>
+        <li id="btn-login"><a href="">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -21,44 +29,18 @@
   <!-- Corpo da página -->
   <main>
     <section>
-      <div>
-        <h1>Bangasdex</h1>
+      <div class="container">
+        <div id="home-left">
+          <div id="titulo">BangasDex</div>
+          <div id="subtitulo">Lorem ipsum, dolor sit</div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore autem dolorum impedit officiis expedita quidem!</p>
+          <button></button>
+        </div>
+        <div>
+          <img src="assets/images/home.png" alt="">
+        </div>
       </div>
-
-      <div><a href="pages/mathilda.html">
-        <img src="assets/images/mathilda/mathilda.webp" alt="">
-      </a>
-      <a href="pages/kagura.html">
-        <img src="assets/images/kagura/kagura.webp" alt="">
-      </a>
-      <a href="pages/guinevere.html">
-        <img src="assets/images/guinevere/guinevere.webp" alt="">
-      </a>
-      <a href="pages/esmeralda.html">
-        <img src="assets/images/esmeralda/esmeralda.webp" alt="">
-      </a>
-      <a href="pages/lylia.html">
-        <img src="assets/images/lylia/lylia.webp" alt="">
-      </a>
-      <a href="pages/lesley.html">
-        <img src="assets/images/lesley/lesley.webp" alt="">
-      </a>
-      <a href="pages/joy.html">
-        <img src="assets/images/joy/joy.webp" alt="">
-      </a>
-      <a href="pages/xavier.html">
-        <img src="assets/images/xavier/xavier.webp" alt="">
-      </a>
-      <a href="pages/valentina.html">
-        <img src="assets/images/valentina/valentina.webp" alt="">
-      </a>
-      <a href="pages/melissa.html">
-        <img src="assets/images/melissa/melissa.webp" alt="">
-      </a>
-      </div>
-      
     </section>
-
   </main>
   <!-- /Corpo da página -->
 
