--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
   <!-- Corpo da página -->
   <main>
-    <section>
+    <section id="home">
       <div class="container">
         <div id="home-left">
           <div id="titulo">BangasDex</div>
           <div id="subtitulo">Lorem ipsum, dolor sit</div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore autem dolorum impedit officiis expedita quidem!</p>
-          <button></button>
+          <button>See heroes</button>
         </div>
         <div>
           <img src="assets/images/home.png" alt="">
