--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>BangasDex</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="BangasDex.css">
+  <link rel="icon" href="assets/images/icon.png">
+  <script src="https://kit.fontawesome.com/e79a00ab49.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Cabeçalho da página -->
@@ -18,9 +20,9 @@
         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
       </label>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Heroes</a></li>
-        <li id="btn-login"><a href="">Login</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="heroes.html">Heroes</a></li>
+        <li id="btn-login"><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -32,11 +34,11 @@
       <div class="container">
         <div id="home-left">
           <div id="titulo">BangasDex</div>
-          <div id="subtitulo">Lorem ipsum, dolor sit</div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore autem dolorum impedit officiis expedita quidem!</p>
-          <button>See heroes</button>
+          <div id="subtitulo">Lorem ipsum, dolor sit!</div>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, laborum corrupti perspiciatis eius rerum commodi soluta consequatur recusandae quidem!</p>
+          <a href="heroes.html">See heroes</a>
         </div>
-        <div>
+        <div id="home-img">
           <img src="assets/images/home.png" alt="">
         </div>
       </div>
