feat(heroes): implement mini cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home">
       <div class="container">
         <div id="home-left">
-          <div id="titulo">BangasDex</div>
+          <div id="titulo" onmouseover="handleOver()" onmouseout="handleOut()">BangasDex</div>
           <div id="subtitulo">Lorem ipsum, dolor sit!</div>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, laborum corrupti perspiciatis eius rerum commodi soluta consequatur recusandae quidem!</p>
           <a href="heroes.html">See heroes</a>
@@ -51,5 +51,6 @@
 
   </footer>
   <!-- Rodapé da página -->
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
